--- a/frontend/src/stylesheets/game/new_game_form.scss
+++ b/frontend/src/stylesheets/game/new_game_form.scss
@@ -33,6 +33,7 @@
   height: 100%;
   width: 100%;
   grid-column: 3/11;
+  font-family: $sans-serif;
 }
 
 .game-form-name {
@@ -51,6 +52,8 @@
     margin-left: 1%;
     padding: .5%;
     width: 20%;
+    font-family: $sans-serif;
+
   }
 }
 
@@ -76,6 +79,7 @@
     width: 4vw;
     height: 2vh;
     margin: .5%;
+    font-family: $sans-serif;
   }
 }
 
@@ -143,6 +147,7 @@
 }
 
 .game-form-description {
+  font-family: $sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -156,6 +161,7 @@
     width: 100%;
   }
   textarea {
+    font-family: $sans-serif;
     width: 30%;
     height: 70%;
     align-self: center;
@@ -178,6 +184,7 @@
   }
   input {
     margin-left: 1%;
+    font-family: $sans-serif;
   }
 }
 
